# StarryOS

./: .axconfig.old.toml  .axconfig.toml  .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  Dockerfile  Makefile  README-zh_CN.md  README.md  TODO.md  build-dora.sh  build.rs  docker-compose.yml  kmod.mk  linker.ld  余泽铖-泉城实验室实习技术报告.md  泉城实验室实习技术报告.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  starry-test-harness.yml  test-template.yml  test.yml
api/: Cargo.toml
api/src/: exception.rs  io.rs  lib.rs  lock_api.rs  mm.rs  signal.rs  socket.rs  task.rs
api/src/bpf/: map.rs  mod.rs  tansform.rs
api/src/bpf/prog/: mod.rs
api/src/file/: epoll.rs  event.rs  fs.rs  inotify.rs  ion.rs  mod.rs  net.rs  pidfd.rs  pipe.rs  signalfd.rs
api/src/kmod/: mod.rs
api/src/kmod/shim/: block.rs  kprint.rs  mod.rs  mq.rs  xarray.rs
api/src/kprobe/: kprobe_test.rs  mod.rs
api/src/perf/: bpf.rs  kprobe.rs  mod.rs  raw_tracepoint.rs  tracepoint.rs  uprobe.rs
api/src/syscall/: mod.rs  perf.rs  resources.rs  signal.rs  sys.rs  sysno_ext.rs
api/src/syscall/bpf/: mod.rs
api/src/syscall/fs/: ctl.rs  fd_ops.rs  inotify.rs  io.rs  memfd.rs  mod.rs
api/src/syscall/io_mpx/: epoll.rs  poll.rs  select.rs
api/src/syscall/ipc/: mod.rs  msg.rs  shm.rs
api/src/syscall/kmod/: mod.rs
api/src/syscall/mm/: brk.rs  mincore.rs  mmap.rs  mod.rs
api/src/syscall/net/: cmsg.rs  io.rs  name.rs  opt.rs  socket.rs
api/src/syscall/task/: clone.rs  clone3.rs  ctl.rs  execve.rs  exit.rs  job.rs  mod.rs  thread.rs  wait.rs
api/src/tracepoint/: event.rs  mod.rs  trace.rs  trace_pipe.rs
api/src/uprobe/: mod.rs
api/src/vfs/: debug.rs  mod.rs  proc.rs  seq_file.rs
api/src/vfs/dev/: cvi_tpu.rs  event.rs  loop.rs  mod.rs
api/src/vfs/dev/ion/: heap.rs  mod.rs
api/src/vfs/dev/tpu/: device.rs  mod.rs  platform.rs
api/src/vfs/sys/: mod.rs
apps/vdso_test/: test_getcpu.rs
core/: Cargo.toml
core/src/: lib.rs  lock_api.rs  mm.rs  msg.rs  probe_aux.rs  shm.rs  task.rs  vdso.rs
core/src/config/: aarch64.rs  loongarch64.rs  riscv64.rs  x86_64.rs
core/src/vfs/: dev.rs  dir.rs
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: eBPF for Starry.md  null_blk.md  x11.md
kernel/: Cargo.toml
kernel/src/: entry.rs  exception.rs  lib.rs  lock_api.rs
kernel/src/bpf/: map.rs  tansform.rs
kernel/src/bpf/prog/: mod.rs
kernel/src/file/: mod.rs  pidfd.rs
kernel/src/kmod/: mod.rs
kernel/src/kmod/shim/: kprint.rs  mq.rs
kernel/src/kprobe/: kprobe_test.rs  mod.rs  probe_aux.rs
kernel/src/kprobe/arch/: aarch64.rs  loongarch64.rs  mod.rs  riscv.rs  x86_64.rs
kernel/src/mm/aspace/: mod.rs
kernel/src/mm/aspace/backend/: cow.rs  file.rs  mod.rs  shared.rs
kernel/src/perf/: bpf.rs  kprobe.rs  mod.rs  raw_tracepoint.rs  tracepoint.rs  uprobe.rs
kernel/src/pseudofs/: debug.rs  dir.rs  mod.rs  proc.rs  sys.rs
kernel/src/syscall/: mod.rs
kernel/src/syscall/fs/: ctl.rs  fd_ops.rs  pidfd.rs
kernel/src/syscall/kmod/: mod.rs
kernel/src/syscall/mm/: mmap.rs
kernel/src/syscall/task/: clone.rs  clone3.rs
kernel/src/task/: mod.rs  user.rs
kernel/src/tracepoint/: event.rs  mod.rs  trace.rs  trace_pipe.rs
kernel/src/uprobe/: mod.rs
make/: Makefile  build.mk  cargo.mk  qemu.mk
modules/: kmod-linker.ld  kmod.mk
modules/hello/: Cargo.toml
modules/hello/src/: lib.rs
modules/kebpf/: Cargo.toml
modules/kebpf/src/: lib.rs  map.rs  tansform.rs
modules/kebpf/src/prog/: mod.rs
scripts/: ci-test.py  test.sh
scripts/make/: build.mk  cargo.mk
signalfd_test/: Cargo.toml  README.md
signalfd_test/.cargo/: config.toml
signalfd_test/src/: main.rs
src/: entry.rs  main.rs  panic.rs
starryos/: Cargo.toml  build.rs  kallsym.ld
starryos/src/: main.rs
user/musl/: Makefile
user/musl/.cargo/: config.toml
user/musl/async_test/: Cargo.toml
user/musl/async_test/src/: main.rs
user/musl/kret/kret/: Cargo.toml  build.rs
user/musl/kret/kret-ebpf/: Cargo.toml
user/musl/kret/kret-ebpf/src/: main.rs
user/musl/kret/kret/src/: main.rs
user/musl/mytrace/: Cargo.toml
user/musl/mytrace/mytrace/: build.rs
user/musl/mytrace/mytrace-ebpf/src/: main.rs
user/musl/mytrace/mytrace/src/: main.rs
user/musl/syscall_ebpf/: Cargo.toml
user/musl/syscall_ebpf/syscall_ebpf/: Cargo.toml  build.rs
user/musl/syscall_ebpf/syscall_ebpf-ebpf/: Cargo.toml
user/musl/syscall_ebpf/syscall_ebpf-ebpf/src/: main.rs
user/musl/syscall_ebpf/syscall_ebpf/src/: main.rs
user/musl/upb/upb/src/: main.rs
user/musl/upb2/upb2/src/: main.rs
xtask/src/: main.rs
