[workspace]
resolver = "2"
members = ["kernel"]
exclude = ["arceos"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Mivik <mivikq@gmail.com>",
]
homepage = "https://github.com/Starry-OS"
repository = "https://github.com/Starry-OS/StarryOS"

[workspace.dependencies]
axfeat = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }

axalloc = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axconfig = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axdisplay = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axdriver = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axfs = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236", package = "axfs-ng" }
axhal = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axinput = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axlog = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axmm = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axnet = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236", package = "axnet-ng" }
axruntime = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axsync = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }
axtask = { git = "https://github.com/arceos-org/arceos.git", rev = "84d6236" }

starry-kernel = { path = "kernel" }

[package]
name = "starryos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = [
    "axfeat/defplat",
    "axfeat/bus-pci",

    "axfeat/display",

    "starry-kernel/input",
    "starry-kernel/vsock",

    # auxilary features
    "axfeat/fs-ng-times",
    "starry-kernel/dev-log",
]
smp = ["axfeat/smp", "axplat-riscv64-visionfive2?/smp"]

vf2 = ["dep:axplat-riscv64-visionfive2", "axfeat/driver-sdmmc"]

[dependencies]
axfeat.workspace = true
starry-kernel.workspace = true

[dependencies.axplat-riscv64-visionfive2]
version = "0.1.0-pre.1"
features = ["fp-simd", "irq", "rtc"]
optional = true

[package.metadata.vendor-filter]
platforms = ["riscv64gc-unknown-none-elf", "loongarch64-unknown-none-softfloat"]
all-features = true
