[workspace]
resolver = "2"
members = ["starryos", "kernel", "modules/*"]
exclude = ["arceos", "user/musl/async_test"]

[workspace.package]
version = "0.2.0-preview.2"
edition = "2024"
description = "A Linux-compatible OS kernel built on ArceOS unikernel"
license = "Apache-2.0"

authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Mivik <mivikq@gmail.com>",
]
homepage = "https://github.com/Starry-OS"
repository = "https://github.com/Starry-OS/StarryOS"

[workspace.dependencies]
axfeat = { version = "0.3.0-preview.2" }

axalloc = { version = "0.3.0-preview.2" }
axconfig = { version = "0.3.0-preview.2" }
axdisplay = { version = "0.3.0-preview.2" }
axdriver = { version = "0.3.0-preview.2" }
axfs = { version = "0.3.0-preview.2", package = "axfs-ng" }
axhal = { version = "0.3.0-preview.2" }
axinput = { version = "0.3.0-preview.2" }
axlog = { version = "0.3.0-preview.2" }
axmm = { version = "0.3.0-preview.2" }
axnet = { version = "0.3.0-preview.2", package = "axnet-ng" }
axruntime = { version = "0.3.0-preview.2" }
axsync = { version = "0.3.0-preview.2" }
axtask = { version = "0.3.0-preview.2" }

starry-kernel = { path = "kernel", version = "=0.2.0-preview.2" }

axerrno = "0.2"
axio = "0.3.0-pre.1"
syscalls = { version = "0.8", default-features = false }

rbpf = { version = "0.4", default-features = false }
ktracepoint = "0.5"
ksym = "0.5"
kprobe = "0.5"
kbpf-basic = "0.5"
kmod = { version = "0.2", package = "kmod-tools" }
kmod-loader = "0.2"

[patch.crates-io]
axcpu = { git = "https://github.com/Godones/axcpu.git", branch = "0.3.0.preview.9" }
axhal = { git = "https://github.com/Godones/arceos.git", branch = "dev" }
axalloc = { git = "https://github.com/Godones/arceos.git", branch = "dev" }

page_table_multiarch = { git = "https://github.com/Godones/page_table_multiarch.git", branch = "dev" }
page_table_entry = { git = "https://github.com/Godones/page_table_multiarch.git", branch = "dev" }
