[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["kprobe_test"]
input = ["dep:axinput"]
memtrack = ["axfeat/backtrace", "axalloc/tracking", "dep:gimli"]
vsock = ["axnet/vsock"]
dev-log = []
kprobe_test = []

[dependencies]
axruntime.workspace = true
axalloc.workspace = true
axbacktrace.workspace = true
axconfig.workspace = true
axdisplay.workspace = true
axdriver.workspace = true
axerrno.workspace = true
axfeat.workspace = true
axfs-ng-vfs.workspace = true
axfs-ng.workspace = true
axhal.workspace = true
axinput = { workspace = true, optional = true }
axio.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axpoll.workspace = true
axsync.workspace = true
axtask.workspace = true
bitflags.workspace = true
bitmaps = { version = "3.2.1", default-features = false }
bytemuck.workspace = true
cfg-if.workspace = true
chrono = { version = "0.4.41", default-features = false }
event-listener.workspace = true
flatten_objects = "0.2.4"
gimli = { version = "*", default-features = false, optional = true }
hashbrown = { workspace = true }
indoc = "2"
inherit-methods-macro = "0.1.0"
kspin.workspace = true
lazy_static = { workspace = true }
linkme.workspace = true
linux-raw-sys = { workspace = true, features = ["ioctl", "loop_device"] }
memory_addr.workspace = true
num_enum = { version = "0.7", default-features = false }
rand = { version = "0.9.1", default-features = false, features = [
    "alloc",
    "small_rng",
] }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
scope-local.workspace = true
slab.workspace = true
spin.workspace = true
starry-process.workspace = true
starry-signal.workspace = true
starry-vm.workspace = true
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }
zerocopy = { version = "0.8.26", features = ["derive"] }

starry-core.workspace = true

lazyinit.workspace = true
lock_api.workspace = true
axcpu.workspace = true
kernel_guard.workspace = true
ksym.workspace = true

static-keys = "0.8.2"
tracepoint = { git = "https://github.com/Starry-OS/tracepoint.git", package = "ktracepoint" }
# tracepoint = { path = "../../ax-project/tracepoint",package = "ktracepoint" }
# kbpf-basic = { path = "../../ax-project/kbpf-basic/" }
# kprobe = { path = "../../ax-project/kprobe" }
kbpf-basic = { git = "https://github.com/Starry-OS/kbpf-basic", rev = "ab3b368" }
rbpf = { git = "https://github.com/qmonnet/rbpf.git", default-features = false, rev = "f31e471" }
kprobe = { git = "https://github.com/Starry-OS/kprobe" }
# kmod-loader = { path = "../../ax-project/kmod/kmod-loader" }
kmod-loader = { git = "https://github.com/Starry-OS/kmod" }
lwprintf-rs = "0.3.1"
# kmod = { path = "../../ax-project/kmod/kmod" }
kmod = { git = "https://github.com/Starry-OS/kmod" }
[target.'cfg(not(target_arch = "loongarch64"))'.dependencies]
unwinding = { version = "=0.2.8", default-features = false, features = [
    "unwinder",
    "fde-gnu-eh-frame-hdr",
    "panic",
    "personality",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.14"
