[package]
name = "kebpf"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true
starry-api.workspace = true
axlog.workspace = true
kmod.workspace = true


[features]
default = []
qemu = [
    "axfeat/driver-virtio-blk",
    "axfeat/driver-virtio-net",
    "axfeat/driver-virtio-socket",

    "axfeat/driver-virtio-gpu",
    "axfeat/display",

    "axfeat/driver-virtio-input",
    "axfeat/input",
    # "axdriver/dyn",
    "starry-api/input",

    "axfeat/vsock",
    "starry-api/vsock",

    "axfeat/defplat",

    # auxilary features
    "axfeat/fs-times",
    "starry-api/dev-log",
]
