[package]
name = "kebpf"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true
starry-kernel.workspace = true
axlog.workspace = true
axerrno.workspace = true
syscalls.workspace = true
axhal.workspace = true
axio.workspace = true

kmod.workspace = true
kbpf-basic.workspace = true


[features]
default = []
qemu = [
    "axfeat/defplat",
    "axfeat/bus-pci",
    "axfeat/display",
    "starry-kernel/input",
    "starry-kernel/vsock",   # auxilary features
    "axfeat/fs-ng-times",
    "starry-kernel/dev-log",
]
smp = ["axfeat/smp", "axplat-riscv64-visionfive2?/smp"]

vf2 = ["dep:axplat-riscv64-visionfive2", "axfeat/driver-sdmmc"]

[dependencies.axplat-riscv64-visionfive2]
features = ["fp-simd", "irq", "rtc"]
optional = true
version = "0.1.0-pre.1"
