[package]
name = "async_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
], optional = true }
smol = { version = "2.0.0", optional = true }
log = { version = "0.4", default-features = false }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
